# encrypted-file-backup-system

./: .gitignore  PROJECT_CLEANUP_SUMMARY.md  QUICK_START.md  README.md  backup-system.code-workspace
client/: .clang-tidy  BUILD_INSTRUCTIONS.md  CMakeLists.txt  build.bat  build.ps1  build_msvc.bat
client/include/: client.h  crypto.h  network.h  protocol.h
client/src/: client.cpp  crypto.cpp  main.cpp  network.cpp  protocol.cpp
include/: protocol.h
server/: run_server.ps1
server/src/: __init__.py  crypto_handler.py  file_manager.py  protocol_handler.py  server.py  server_core.py
server/storage/: .gitkeep
